# ComfyUI-GaussianShadingWatermark

./: README.md  README_ZH.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
example_workflows/: [GS]Extraction-DDIM-inversion.json  [GS]Flux_generate_and_DDIM_inversion.json  [GS]Pixart_generate_and_DDIM_inversion.json  [GS]majicmixRealistic-DDIM-inversion.json
